--- a/open_agenda/templates/agenda.html
+++ b/open_agenda/templates/agenda.html
@@ -24,43 +24,8 @@
 
 </head>
 <body>
-    
-    <div class="sidebar-container">
-        <div class="sidebar-logo">
-          <i class="fa fa-calendar"></i> Open Agenda
-        </div>
-        <ul class="sidebar-navigation">
-          <li class="header">Calendar</li>
-          <li>
-            <a href="#">
-              <i class="fa fa-calendar" aria-hidden="true"></i> Today
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-check" aria-hidden="true"></i> Week
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-table" aria-hidden="true"></i> Date Picker
-            </a>
-          </li>
-          <li class="header">Projects</li>
-          <li>
-            <a href="#">
-              <i class="fa fa-users" aria-hidden="true"></i> Friends
-            </a>
-          </li>
-
-          <li>
-            <a class="font-weight-light" href="#">
-              <i class="fa fa-plus" aria-hidden="true"></i> Add Project
-            </a>
-          </li>
-        
-        </ul>
-      </div>
+   
+      {% include "blocks/navbar.html" %}
       
       <div class="content-container">
       
