--- a/open_agenda/templates/blocks/navbar.html
+++ b/open_agenda/templates/blocks/navbar.html
@@ -5,12 +5,12 @@
     <ul class="sidebar-navigation">
       <li class="header">Calendar</li>
       <li>
-        <a href="#">
+        <a href="/">
           <i class="fa fa-check" aria-hidden="true"></i> Today
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="/weekly">
           <i class="fa fa-calendar" aria-hidden="true"></i> Week
         </a>
       </li>
