--- a/open_agenda/templates/blocks/navbar.html
+++ b/open_agenda/templates/blocks/navbar.html
@@ -15,7 +15,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="/calendar">
           <i class="fa fa-table" aria-hidden="true"></i> Date Picker
         </a>
       </li>
@@ -27,7 +27,7 @@
       </li>
 
       <li>
-        <a class="font-weight-light" href="#">
+        <a class="font-weight-light" href="">
           <i class="fa fa-plus" aria-hidden="true"></i> Add Project
         </a>
       </li>
