--- a/open_agenda/templates/calendar.html
+++ b/open_agenda/templates/calendar.html
@@ -11,9 +11,10 @@
 
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
@@ -28,13 +29,14 @@
     {% include "blocks/navbar.html" %}
 
       
-      <div class="content-container">
-        <div class="container-fluid">
-            <h2 class="m-2 mb-4">Choose Date</h2>
-            <input id="datepicker" class="datepicker" data-date-format="dd/mm/yyyy" placeholder="05-03-2020">
-          </div>
-      </div>
-
+    <div class="content-container">
+    <div class="container-fluid">
+        <h2 class="m-2 mb-4">Choose Date</h2>
+        <input id="datepicker" class="datepicker" data-date-format="dd/mm/yyyy" placeholder="05-03-2020">
+        
+    </div>
+    </div>
+    
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous"></script>
