--- a/open_agenda/templates/agenda.html
+++ b/open_agenda/templates/agenda.html
@@ -2,87 +2,136 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Open Agenda</title>
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"> 
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Open Agenda</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
 
-  <link rel="stylesheet" href="{% static 'css/style.css'%}">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <!-- CSS only -->
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="{% static 'css/style.css'%}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script>
 
-   {% csrf_token %}
+    {% csrf_token %}
 
 </head>
+
 <body>
-   
-      {% include "blocks/navbar.html" %}
-      
-      <div class="content-container">
-      
+
+    {% include "blocks/navbar.html" %}
+
+    <div class="content-container">
+
         <div class="container-fluid">
-      
-          <!-- Main component for a primary marketing message or call to action -->
-          
+
+            <!-- Main component for a primary marketing message or call to action -->
+
             <div class="jumbotron">
-              <h2>{{ notes.pub_date }}</h2>
-              <div class="d-flex justify-content-between pb-3">
-                  <a id="{{ dates.1 }}" class="btn btn-warning" onclick="changedate(this.id)"><i class="fa fa-arrow-left"></i> Yesterday </a>
-                  <a id="{{ dates.0 }}" class="btn btn-warning" onclick="changedate(this.id)">Tomorrow <i class="fa fa-arrow-right"></i></a>
-              </div>
-              <textarea id="notes" name="notes" cols="30" rows="10" >{{ notes.notes }}</textarea>
+                <h2>{{ notes.pub_date }}</h2>
+                <div class="d-flex justify-content-between pb-3">
+                    <a id="{{ dates.1 }}" class="btn btn-warning" onclick="changedate(this.id)"><i
+                            class="fa fa-arrow-left"></i> Yesterday </a>
+                    <a id="{{ dates.0 }}" class="btn btn-warning" onclick="changedate(this.id)">Tomorrow <i
+                            class="fa fa-arrow-right"></i></a>
+                </div>
+                <textarea id="notes" name="notes" cols="30" rows="10">{{ notes.notes }}</textarea>
             </div>
-            
+
             <div id="success-alert" class="alert alert-secondary" role="alert">
-                Updated    
+                Updated
             </div>
-            <button id="update-btn" class="btn btn-success"><i class="fas fa-save"></i> Save</button>
-          </div>
-      </div>
+            <button id="update-btn" class="btn btn-success"><i class="fa fa-save"></i> Save</button>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="add-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <form action="/add-project/" method="POST">
+                {% csrf_token %}
+                <div class="modal-content">
+
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Add Project</h5>
+                    </div>
+                    <div class="modal-body">
+                            <div class="mb-3">
+                              <label for="name" class="form-label">Title: </label>
+                              <input type="text" class="form-control" id="title" name="title">
+                            </div>
+                            <div class="mb-3">
+                              <label for="icon" class="form-label">Icon</label>
+                              <select id="icon" name="icon" class="form-select">
+                                <option selected>Select your icon</option>
+                                <option value="sticky-note">copy</option>
+                                <option value="bird">bird</option>
+                                <option value="notebook">notebook</option>
+                                <option value="laptop">laptop</option>
+
+                              </select>
+                            </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                    </div>
+                </form>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
 
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
     <script>
 
         $("#success-alert").hide();
 
-
         let current_date = "{{notes.pub_date}}";
 
-        var simplemde = new SimpleMDE({ 
+        var simplemde = new SimpleMDE({
             element: document.getElementById("notes"),
             spellChecker: false
+        });
+
+        $("#add-project").click(()=>{
+            $('#add-modal').modal('show');
         });
 
 
         $.ajaxSetup({
             headers:
-            { 'X-CSRF-TOKEN': $("[name='csrfmiddlewaretoken']").val() }
+                { 'X-CSRF-TOKEN': $("[name='csrfmiddlewaretoken']").val() }
         });
-        
-        
-        $(function ()
-        {
-            $(document).on("keydown", function(e)
-            {
-                if ((e.keyCode == 10 || e.keyCode == 13) && e.ctrlKey)
-                {
+
+
+        $(function () {
+            $(document).on("keydown", function (e) {
+                if ((e.keyCode == 10 || e.keyCode == 13) && e.ctrlKey) {
                     createRequest();
                 }
             });
         });
 
-        function changedate(date){
+        function changedate(date) {
             window.location.href = `/get/?date=${date}`;
         }
 
@@ -90,7 +139,7 @@
             createRequest()
         });
 
-        function createRequest(){
+        function createRequest() {
             var request;
 
             request = $.ajax({
@@ -105,22 +154,23 @@
                 datatype: "json"
             });
 
-            request.done(function(msg) {
-                if(msg=="success"){
-                    $("#success-alert").fadeTo(2000, 500).slideUp(500, function(){
+            request.done(function (msg) {
+                if (msg == "success") {
+                    $("#success-alert").fadeTo(2000, 500).slideUp(500, function () {
                         $("#success-alert").slideUp(500);
                     });
                 }
-                else{
+                else {
                     alert("error");
                 }
             });
 
 
-            request.fail(function(jqXHR, textStatus) {
+            request.fail(function (jqXHR, textStatus) {
                 $("#result").html("Request failed: " + textStatus);
             });
         }
     </script>
 </body>
+
 </html>
