--- a/open_agenda/templates/weekly.html
+++ b/open_agenda/templates/weekly.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- CSS only -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
@@ -33,10 +34,10 @@
             <h2 class="m-2 mb-4">Weekly Notes</h2>
 
             {% for q in days %} 
-            <div id="{{ q }}" class="card m-2 days" onclick="changedate(this.id)" >
+            <div id="{{ q.0 }}" class="card m-2 days" onclick="changedate(this.id)" >
               <div class="card-body">
                   <i class="fa fa-arrow-right px-2"></i>
-                 {{ q }}
+                  <span style="font-weight: 300;">{{ q.0 }}</span>  {{ q.1 }}
               </div>
             </div>
             {% endfor %} 
@@ -45,47 +46,29 @@
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/dayjs.min.js" integrity="sha512-0fcCRl828lBlrSCa8QJY51mtNqTcHxabaXVLPgw/jPA5Nutujh6CbTdDgRzl9aSPYW/uuE7c4SffFUQFBAy6lg==" crossorigin="anonymous"></script>
+    
+    
     <script>
 
         let current_date = "{{notes.pub_date}}";
-        value = 0;
-        $.ajaxSetup({
-            headers:
-            { 'X-CSRF-TOKEN': $("[name='csrfmiddlewaretoken']").val() }
-        });
-        // $(".days").click(()=>{
-        //     console.log($(this).closest('.days').attr('id'));
-        //     // 
-        // })
 
         function changedate(date){
             window.location.href = `/get/?date=${date}`;
         }
 
-        $("#update-btn").on("click", function () {
-            var request;
+        function getDayName(dateStr, locale)
+        {
+            var date = new Date(dateStr);
+            return date.toLocaleDateString(locale, { weekday: 'long' });        
+        }
 
-            request = $.ajax({
-                url: "/update/",
-                method: "POST",
-                data:
-                {
-                    date: current_date,
-                    notes: simplemde.value(),
-                    csrfmiddlewaretoken: $("[name='csrfmiddlewaretoken']").val(),
-                },
-                datatype: "json"
-            });
+        var dateStr = '05-03-2021'.replace('-','/');
+        var day = getDayName(dateStr, "tr");
+        console.log(day)
 
-            request.done(function(msg) {
-                $("#result").html(msg);
-            });
-
-            request.fail(function(jqXHR, textStatus) {
-                $("#result").html("Request failed: " + textStatus);
-            });
-        });
     </script>
+
+    
 </body>
 </html>
