--- a/open_agenda/templates/project.html
+++ b/open_agenda/templates/project.html
@@ -48,41 +48,14 @@
             <div id="success-alert" class="alert alert-secondary" role="alert">
                 Updated
             </div>
-            <button id="update-btn" class="btn btn-success"><i class="fa fa-save"></i> Save</button>
+            
+                <button id="update-btn" class="btn btn-success"><i class="fa fa-save"></i> Save</button>
+                <a class="btn btn-danger" onclick="return confirm('Are you sure?')" href="/delete?project={{ notes.id }}"><i class=" fa fa-trash"></i> Delete</a>
         </div>
 
-        <!-- Modal -->
-        <div class="modal fade" id="add-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <form action="/add-project/" method="POST">
-                {% csrf_token %}
-                <div class="modal-content">
-
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Add Project</h5>
-                    </div>
-                    <div class="modal-body">
-                            <div class="mb-3">
-                              <label for="name" class="form-label">Title: </label>
-                              <input type="text" class="form-control" id="title" name="title">
-                            </div>
-                            <div class="mb-3">
-                              <label for="icon" class="form-label">Icon</label>
-                              <select id="icon" name="icon" class="form-select">
-                                <option selected>Open this select menu</option>
-                                <option value="1">One</option>
-                              </select>
-                            </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Save changes</button>
-                    </div>
-                </form>
-
-                </div>
-            </div>
+        
+        {% include "blocks/add_project_modal.html" %}
+        
         </div>
 
     </div>
