block element replaced for plain html

--- a/open_agenda/templates/calendar.html
+++ b/open_agenda/templates/calendar.html
@@ -33,8 +33,9 @@
     <div class="container-fluid">
         <h2 class="m-2 mb-4">Choose Date</h2>
         <input id="datepicker" class="datepicker" data-date-format="dd/mm/yyyy" placeholder="05-03-2020">
-        
     </div>
+    {% include "blocks/add_project_modal.html" %}
+
     </div>
     
     <!-- JavaScript Bundle with Popper -->
