--- a/open_agenda/templates/weekly.html
+++ b/open_agenda/templates/weekly.html
@@ -42,6 +42,9 @@
             </div>
             {% endfor %} 
           </div>
+
+          {% include "blocks/add_project_modal.html" %}
+
       </div>
 
     <!-- JavaScript Bundle with Popper -->
