settings page arrangment

--- a/open_agenda/templates/settings.html
+++ b/open_agenda/templates/settings.html
@@ -19,8 +19,9 @@
         <div class="container-fluid">
 
             <!-- Main component for a primary marketing message or call to action -->
-
-           
+            <div id="success-alert" class="alert alert-secondary" role="alert">
+                Updated
+            </div>
             <button id="update-btn" class="btn btn-success"><i class="fa fa-save"></i> Save</button>
         </div>
 
