--- a/open_agenda/templates/settings.html
+++ b/open_agenda/templates/settings.html
@@ -17,13 +17,12 @@
     <div class="content-container">
 
         <div class="container-fluid">
+            
+
+            <a href="/download-notes" class="btn btn-warning">Download Notes As JSON</a>
 
             <!-- Main component for a primary marketing message or call to action -->
-            <div id="success-alert" class="alert alert-secondary" role="alert">
-                Updated
-            </div>
-            <button id="update-btn" class="btn btn-success"><i class="fa fa-save"></i> Save</button>
-        </div>
+           
 
         {% include "blocks/add_project_modal.html" %}
 
