--- a/open_agenda/templates/weekly.html
+++ b/open_agenda/templates/weekly.html
@@ -22,6 +22,9 @@
               </div>
             </div>
             {% endfor %} 
+
+            <a href="/generate-report" class="btn btn-warning m-2"><i class="fa fa-sticky-note"></i> Generate Weekly Report</a>
+
           </div>
 
           {% include "blocks/add_project_modal.html" %}
