--- a/open_agenda/templates/calendar.html
+++ b/open_agenda/templates/calendar.html
@@ -3,7 +3,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     {% include "blocks/head.html" %}
+
+    <link rel="stylesheet" type="text/css" href="https://uicdn.toast.com/tui-calendar/latest/tui-calendar.css" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.css" integrity="sha256-uq9PNlMzB+1h01Ij9cx7zeE2OR2pLAfRw3uUUOOPKdA=" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.css" integrity="sha256-ejA/z0dc7D+StbJL/0HAnRG/Xae3yS2gzg0OAnIURC4=" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.6.0/main.css" integrity="sha256-2VeSst5Wpgw2ZJrz5osZIs4gUUTSuqn90UndI8f+oEU=" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.6.0/main.min.css" integrity="sha256-5HuG2aW/68IIDxuOqCHWngmosRqa5J+3Op6XWwNuevc=" crossorigin="anonymous">
 </head>
 <body>
     
@@ -12,9 +20,12 @@
       
     <div class="content-container">
     <div class="container-fluid">
-        <h2 class="m-2 mb-4">Choose Date</h2>
-        <input id="datepicker" class="datepicker" data-date-format="dd/mm/yyyy" placeholder="05-03-2020">
-    </div>
+        <!-- <input id="datepicker" class="datepicker" data-date-format="dd/mm/yyyy" placeholder="05-03-2020"> -->
+    
+        <div id='calendar'></div>
+        </div>
+
+
     {% include "blocks/add_project_modal.html" %}
 
     </div>
@@ -22,6 +33,13 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous"></script>
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.js" integrity="sha256-ekrJn2FeZaiUFq99QswpQCUTME/HxaDfX7R8INzKJGE=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/locales-all.min.js" integrity="sha256-6TW9hevn9VV+Dk6OtclSzIjH05B6f2WWhJ/PQgy7m7s=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.6.0/main.js" integrity="sha256-bIx0Mm167TMqrQZ0E/BXBCSMgs40SlJj7LFqJ202mhI=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.6.0/locales-all.min.js" integrity="sha256-6TW9hevn9VV+Dk6OtclSzIjH05B6f2WWhJ/PQgy7m7s=" crossorigin="anonymous"></script>
+    
     <script>
 
         var widthPerDay = window.innerWidth / 12; 
@@ -55,6 +73,21 @@
         }
 
 
+        document.addEventListener('DOMContentLoaded', function() {
+        var calendarEl = document.getElementById('calendar');
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+          initialView: 'dayGridMonth',
+          timeZone: 'local',
+          events: '/getEvents',
+          dateClick: function(info) {
+                changedate(info.dateStr);
+            },
+            
+        });
+        calendar.setOption('locale', 'tr');
+        calendar.getOption('locale');
+        calendar.render();
+      });
     </script>
 </body>
 </html>
