calendar icon redirected to calendar

--- a/open_agenda/templates/blocks/navbar.html
+++ b/open_agenda/templates/blocks/navbar.html
@@ -1,7 +1,12 @@
 <div class="sidebar-container">
   <div class="sidebar-logo">
+    
+    <a href="/calendar" style="text-decoration: none; color: white;">
+      <i class="fa fa-calendar"></i>
+   </a>
+    
     <a href="/" style="text-decoration: none; color: white;">
-      <i class="fa fa-calendar"></i> Open Agenda
+       Open Agenda
     </a>
   </div>
   <ul class="sidebar-navigation">
