Date picker renamed as agend

--- a/open_agenda/templates/blocks/navbar.html
+++ b/open_agenda/templates/blocks/navbar.html
@@ -23,7 +23,7 @@
     </li> -->
     <li>
       <a href="/calendar">
-        <i class="fa fa-table" aria-hidden="true"></i> Date Picker
+        <i class="fa fa-table" aria-hidden="true"></i> Agenda
       </a>
     </li>
     <li class="header">Projects</li>
