--- a/open_agenda/templates/settings.html
+++ b/open_agenda/templates/settings.html
@@ -18,13 +18,20 @@
 
         <div class="container-fluid">
             
+            <h2>Settings</h2>
 
-            <a href="/download-notes" class="btn btn-warning">Download Notes As JSON</a>
+            <a href="/download-notes" class="btn btn-warning"><i class="fa fa-save"></i> Download Notes As JSON</a>
 
             <!-- Main component for a primary marketing message or call to action -->
-           
+            
+            <form action="/importCalendar/" method="POST" >
+                {% csrf_token %}
+                <textarea name="ics" id="ics" cols="30" rows="10"></textarea>
 
-        {% include "blocks/add_project_modal.html" %}
+                <button class="btn btn-info">Import Calendar</button>
+            </form>
+
+            {% include "blocks/add_project_modal.html" %}
 
         </div>
 
