--- a/open_agenda/templates/settings.html
+++ b/open_agenda/templates/settings.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <head>
- 
+
     {% include "blocks/head.html" %}
 
 
@@ -17,19 +17,30 @@
     <div class="content-container">
 
         <div class="container-fluid">
-            
+
             <h2>Settings</h2>
 
-            <a href="/download-notes" class="btn btn-warning"><i class="fa fa-save"></i> Download Notes As JSON</a>
 
-            <!-- Main component for a primary marketing message or call to action -->
-            
-            <form action="/importCalendar/" method="POST" >
-                {% csrf_token %}
-                <textarea name="ics" id="ics" cols="30" rows="10"></textarea>
+            <legend class="col-form-label col-sm-2 pb-5">
 
-                <button class="btn btn-info">Import Calendar</button>
-            </form>
+                <h4 class="">Download Your Notes</h4>
+
+                <a href="/download-notes" class="btn btn-secondary"><i class="fa fa-save"></i> Download Notes As JSON</a>
+
+                <!-- Main component for a primary marketing message or call to action -->
+            </legend>
+
+
+            <legend class="col-form-label col-sm-2 pb-5" style="width: 100%;">
+
+                <h4>Import Calendar - Icas </h4>
+
+                <form action="/importCalendar/" method="POST" style="width: 100%;">
+                    {% csrf_token %}
+                    <textarea name="ics" id="ics" class="form-control mb-3" rows="10" width="100%" placeholder="#Paste raw .ics file to here..."></textarea>
+                    <button class="btn btn-secondary"><i class="fa fa-upload"></i> Import Calendar</button>
+                </form>
+            </legend>
 
             {% include "blocks/add_project_modal.html" %}
 
@@ -53,7 +64,7 @@
             spellChecker: false
         });
 
-        $("#add-project").click(()=>{
+        $("#add-project").click(() => {
             $('#add-modal').modal('show');
         });
 
